--- a/index.html
+++ b/index.html
@@ -931,21 +931,21 @@
                 { label: 'Plan. Colheita', icon: 'fas fa-tractor', target: 'planejamentoColheita', permission: 'planejamentoColheita' },
                 { label: 'Plan. Inspeção', icon: 'fas fa-calendar-alt', target: 'planejamento', permission: 'planejamento' },
                 {
-                    label: 'Lançamentos', icon: 'fas fa-pen-to-square', permission: 'lancamentoBroca',
+                    label: 'Lançamentos', icon: 'fas fa-pen-to-square',
                     submenu: [
                         { label: 'Lançamento Broca', icon: 'fas fa-bug', target: 'lancamentoBroca', permission: 'lancamentoBroca' },
                         { label: 'Lançamento Perda', icon: 'fas fa-dollar-sign', target: 'lancamentoPerda', permission: 'lancamentoPerda' },
                     ]
                 },
                 {
-                    label: 'Relatórios', icon: 'fas fa-chart-line', permission: 'relatorioBroca',
+                    label: 'Relatórios', icon: 'fas fa-chart-line',
                     submenu: [
                         { label: 'Relatório Broca', icon: 'fas fa-chart-bar', target: 'relatorioBroca', permission: 'relatorioBroca' },
                         { label: 'Relatório Perda', icon: 'fas fa-chart-pie', target: 'relatorioPerda', permission: 'relatorioPerda' },
                     ]
                 },
                 {
-                    label: 'Administrativo', icon: 'fas fa-cogs', permission: 'gerenciarUsuarios',
+                    label: 'Administrativo', icon: 'fas fa-cogs',
                     submenu: [
                         { label: 'Cadastros', icon: 'fas fa-book', target: 'cadastros', permission: 'configuracoes' },
                         { label: 'Cadastrar Pessoas', icon: 'fas fa-id-card', target: 'cadastrarPessoas', permission: 'cadastrarPessoas' },
